Switched overflow: scroll to overflow: auto to prevent the scrollbar from being visible when it's not needed.

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  overflow: scroll;
+  overflow: auto;
 
   /*
    * Use margin for top and bottom so that the margins apply to the scroll area.
